--- a/package.json
+++ b/package.json
@@ -1,20 +1,43 @@
 {
   "name": "tea_tourism",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build",
+    "lint": "eslint . --fix --cache"
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
+    "jquery": "^3.7.1",
+    "pinia": "^3.0.4",
+    "router": "^2.2.0",
+    "slick-carousel": "^1.8.1",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@tsconfig/node22": "^22.0.2",
+    "@types/jquery": "^3.5.33",
+    "@types/node": "^22.18.11",
     "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.1.7"
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/tsconfig": "^0.8.1",
+    "eslint": "^9.37.0",
+    "eslint-plugin-vue": "~10.5.0",
+    "jiti": "^2.6.1",
+    "npm-run-all2": "^8.0.4",
+    "typescript": "~5.9.0",
+    "vite": "^7.1.11",
+    "vite-plugin-vue-devtools": "^8.0.3",
+    "vue-tsc": "^3.1.1"
   }
 }
